force-app/main/default/objects/Collaborator__c/Collaborator__c.object-meta.xml
<CustomObject>
    <description>This object manage internal and external KparK collaborators.
It allow HR Team to manage collaborators  without using salesforce user management. There&apos;s two type of collaborator :
 - Internal collaborator
 - External collaborator
A collaborator is unique.</description>
    <label>Collaborateur</label>
    <nameField>
        <label>Nom complet</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collaborateurs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>