force-app/main/default/objects/Collaborator__c/fields/addressComplement__c.field-meta.xml
<CustomField>
    <fullName>addressComplement__c</fullName>
    <label>Complément d&apos;adresse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>