force-app/main/default/objects/Collaborator__c/fields/birthDate__c.field-meta.xml
<CustomField>
    <fullName>birthDate__c</fullName>
    <label>Date de naissance</label>
    <type>Date</type>
</CustomField>