force-app/main/default/objects/Collaborator__c/fields/financialChargeCount__c.field-meta.xml
<CustomField>
    <fullName>financialChargeCount__c</fullName>
    <label>[#] Nombre de charges financières</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>