force-app/main/default/objects/Collaborator__c/fields/firstName__c.field-meta.xml
<CustomField>
    <fullName>firstName__c</fullName>
    <label>Prénom</label>
    <length>50</length>
    <type>Text</type>
</CustomField>