force-app/main/default/objects/Collaborator__c/fields/job__c.field-meta.xml
<CustomField>
    <fullName>job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Métier</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Referencial__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Job</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Referencial__c</referenceTo>
    <relationshipLabel>Collaborateurs</relationshipLabel>
    <relationshipName>collaboratorJob</relationshipName>
    <type>Lookup</type>
</CustomField>