force-app/main/default/objects/Collaborator__c/fields/lastName__c.field-meta.xml
<CustomField>
    <fullName>lastName__c</fullName>
    <label>Nom</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>