force-app/main/default/objects/Collaborator__c/fields/localisation__c.field-meta.xml
<CustomField>
    <fullName>localisation__c</fullName>
    <label>Localisation</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>