force-app/main/default/objects/Collaborator__c/fields/manager__c.field-meta.xml
<CustomField>
    <fullName>manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable</label>
    <referenceTo>Collaborator__c</referenceTo>
    <relationshipLabel>Collaborateurs</relationshipLabel>
    <relationshipName>collaborators</relationshipName>
    <type>Lookup</type>
</CustomField>