force-app/main/default/objects/Collaborator__c/fields/mobilePhone__c.field-meta.xml
<CustomField>
    <fullName>mobilePhone__c</fullName>
    <label>Téléphone mobile pro.</label>
    <type>Phone</type>
</CustomField>