force-app/main/default/objects/Collaborator__c/fields/personEmail__c.field-meta.xml
<CustomField>
    <fullName>personEmail__c</fullName>
    <label>E-mail perso.</label>
    <type>Email</type>
</CustomField>