force-app/main/default/objects/Collaborator__c/fields/personMobilePhone__c.field-meta.xml
<CustomField>
    <fullName>personMobilePhone__c</fullName>
    <label>Téléphone mobile perso.</label>
    <type>Phone</type>
</CustomField>