force-app/main/default/objects/Collaborator__c/fields/personPhone__c.field-meta.xml
<CustomField>
    <fullName>personPhone__c</fullName>
    <label>Téléphone fixe perso.</label>
    <type>Phone</type>
</CustomField>