force-app/main/default/objects/Collaborator__c/fields/phone__c.field-meta.xml
<CustomField>
    <fullName>phone__c</fullName>
    <label>Téléphone fixe pro.</label>
    <type>Phone</type>
</CustomField>