force-app/main/default/objects/Collaborator__c/fields/postalCode__c.field-meta.xml
<CustomField>
    <fullName>postalCode__c</fullName>
    <label>Code postal</label>
    <length>20</length>
    <type>Text</type>
</CustomField>