force-app/main/default/objects/Collaborator__c/fields/state__c.field-meta.xml
<CustomField>
    <fullName>state__c</fullName>
    <label>Département/région</label>
    <length>128</length>
    <type>Text</type>
</CustomField>