force-app/main/default/objects/Collaborator__c/fields/user__c.field-meta.xml
<CustomField>
    <fullName>user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utilisateur associé</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Collaborateurs</relationshipName>
    <type>Lookup</type>
</CustomField>