force-app/main/default/objects/Collaborator__c/recordTypes/ExternalCollaborator.recordType-meta.xml
<RecordType>
    <fullName>ExternalCollaborator</fullName>
    <active>true</active>
    <description>Collaborateur externe de la société K par K (prestataire)</description>
    <label>Collaborateur externe</label>
</RecordType>