force-app/main/default/objects/Collaborator__c/recordTypes/InternalCollaborator.recordType-meta.xml
<RecordType>
    <fullName>InternalCollaborator</fullName>
    <active>true</active>
    <description>Collaborateur interne à la société K par K</description>
    <label>Collaborateur interne</label>
</RecordType>