force-app/main/default/objects/Collaborator__c/validationRules/VR_K3_Collaborator_FirstName.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_Collaborator_FirstName</fullName>
    <active>false</active>
    <errorConditionFormula>AND(!$User.ByPassValidationRule__c, ISBLANK( firstName__c ))</errorConditionFormula>
    <errorDisplayField>firstName__c</errorDisplayField>
    <errorMessage>Le prénom doit être renseigné</errorMessage>
</ValidationRule>