force-app/main/default/objects/Collaborator__c/validationRules/VR_K3_Collaborator_Reference.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_Collaborator_Reference</fullName>
    <active>true</active>
    <description>Le champ référence est obligatoire si utilisateur interne</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
$Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c &amp;&amp;
RecordType.DeveloperName = &apos;InternalCollaborator&apos; &amp;&amp;
ISBLANK( reference__c )</errorConditionFormula>
    <errorDisplayField>reference__c</errorDisplayField>
    <errorMessage>La référence doit être renseignée</errorMessage>
</ValidationRule>