force-app/main/default/objects/Collaborator__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>reference__c</columns>
    <columns>startDate__c</columns>
    <columns>endDate__c</columns>
    <columns>isActive__c</columns>
    <columns>job__c</columns>
    <columns>employedBy__c</columns>
    <columns>user__c</columns>
    <columns>manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>endDate__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>OUSTRIN</value>
    </filters>
    <label>Tout</label>
</ListView>