force-app/main/default/objects/Collaborator__c/listViews/Sans_utilisateur.listView-meta.xml
<ListView>
    <fullName>Sans_utilisateur</fullName>
    <columns>NAME</columns>
    <columns>reference__c</columns>
    <columns>startDate__c</columns>
    <columns>endDate__c</columns>
    <columns>job__c</columns>
    <columns>employedBy__c</columns>
    <columns>user__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>user__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>endDate__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>job__c</field>
        <operation>notEqual</operation>
        <value>POSEUR SOUS-TRAITANT</value>
    </filters>
    <filters>
        <field>reference__c</field>
        <operation>startsWith</operation>
        <value>VEN</value>
    </filters>
    <label>Sans utilisateur</label>
</ListView>